<resources>
    <string name="app_name">MealMate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="title_login">Login</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_register">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="login_now">Login Now</string>
    <string name="logout">Logout</string>
    <string name="app_logo_description">MealMate App Logo</string>
    <string name="create_manage"><![CDATA[Create & manage]]></string>
    <string name="account_prefs"><![CDATA[Account & prefs]]></string>
    <string name="find_nearby_stores">Find nearby stores</string>
    <string name="store_locations">Store Locations</string>
    <string name="google_maps_key">YOUR_API_KEY</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
</resources>